# SpeechJailbreaker

./: .env  .gitignore  .gitmodules  LICENSE  README.md  analysis.py  check_env.py  environment.yml  extra.py  inspect_model.py  jf  pair_summary.json  pyproject.toml  requirements.txt  test.py  test_gemini.py
BOOST/Attack_Autoattack/: __init__.py  autoattack.py  autoattack_apgd.py  autoattack_wrapper.py  autopgd_base.py
BOOST/Attack_Autoattack/autoattack/: __init__.py
BOOST/Attack_BOOST_GPTFuzzer/: gptfuzz.py
BOOST/Attack_GCG/: run_gcg.py
BOOST/Attack_GPTFuzzer/: gptfuzz.py
BOOST/Attack_GPTFuzzer/gptfuzzer/fuzzer/: core.py
BOOST/Attack_ICA/: ica.py  reasoning.py  sure.py
BOOST/Attack_JBC/: jbc.py
BOOST/Attack_PAIR/: common.py  config.py  conversers.py  judges.py  language_models.py  pair.py  pair_attack.py  pair_old.py
BOOST/Attack_PGD/: run_pgd.py
BOOST/Attack_PGD/LLM_Embedding_Attack/: embedding_attack_toxic.py  speechllm.py
BOOST/Attack_TAP/: TAP.py  __init__.py  common.py  conversers.py  get_score.py  language_models.py  loggers.py  main_TAP.py
BOOST/Attack_auto/: auto.py  old.py
BOOST/Attack_auto/autoattack/: autoattack.py  autopgd_base.py
BOOST/utils/: constants.py  llm.py
Dataset/: Advbench_391_harm.csv  Advbench_391_harmless.csv  JBCdataset.csv  harmful.csv  harmful_targets.csv
Defense_prompt/: ICD.json  adashield.json  self-reminder.json  self_reminder.json
Defenses/SPIRIT/: __init__.py  noise_utils.py  spirit_wrapper.py
Defenses/SmoothLLM/: perturbations.py  smooth_prompt.py  smoothllm.py  smoothllmWrapper.py
Experiments/: autoattack_exp.py  autoattack_exp.py.bak  boost_fuzzer_exp.py  fuzzer_exp.py  gcg_exp.py  ica_exp.py  jbc_exp.py  pair_exp.py  pgd_exp.py  reasoning_exp.py  sure_exp.py  tap_exp.py
Scripts/: .run_TAP.sh.swp  JBC_check_and_run.sh  PAIR_check_and_run.sh  analyze_results.py  calculate_asr.py  run_AutoAttack.sh  run_GCG.sh  run_GPTFuzzer.sh  run_ICA.sh  run_JBC.sh  run_PAIR.sh  run_PGD.sh  run_SURE.sh  run_TAP.sh  run_auto.sh  run_boost_GPTFuzzer.sh  run_interface.py  run_reasoning.sh  run_reasoning_new.sh
attackbench/: api.py  config.py  run.py
attackbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
speechjailbreaker/: __init__.py  api.py  run.py
speechjailbreaker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
strongreject/: strongreject_evaluator.py
tmp/: summary-20241220-143022.json  summary-20250127-120000.json
wandb/: latest-run
wandb/run-20251121_144956-ni0c3mf3/: run-ni0c3mf3.wandb
wandb/run-20251121_150242-suybjjns/: run-suybjjns.wandb
(+718 files in other folders)
