[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speechjailbreaker"
version = "0.1.1"
description = "SpeechJailbreaker: Framework for testing SpeechLLM robustness against jailbreak attacks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "SpeechJailbreaker Contributors"}
]
keywords = ["llm", "jailbreak", "red-teaming", "safety", "attack"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
speechjailbreaker = "speechjailbreaker.run:main"

[project.urls]
Homepage = "https://github.com/NWULIST/SpeechJailbreaker"
Repository = "https://github.com/NWULIST/SpeechJailbreaker"

[tool.setuptools.packages.find]
where = ["."]
include = ["speechjailbreaker*"]
